--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "index.js",
   "type": "module",
   "scripts": {
+    "install": "npm run build",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "git clean -xffd -e node_modules/",
