--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "url": "https://github.com/justinfagnani/pdf-viewer-element.git"
   },
   "dependencies": {
-    "@bundled-es-modules/pdfjs-dist": "^2.5.207-rc1",
     "@lit-labs/context": "^0.1.3",
     "@material/mwc-fab": "^0.27.0",
     "@material/mwc-formfield": "^0.27.0",
@@ -54,6 +53,7 @@
     "@types/pdfjs-dist": "^2.1.5",
     "@web/dev-server": "^0.1.34",
     "lit-analyzer": "^1.2.1",
+    "pdfjs-dist": "^4.0.189",
     "prettier": "^2.7.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "~4.8.2",
