--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@material/mwc-switch": "^0.27.0",
     "@material/mwc-textfield": "^0.27.0",
     "@material/mwc-top-app-bar-fixed": "^0.27.0",
-    "lit": "^2.3.1"
+    "lit": "^2.3.1",
+    "pdfjs-dist": "^4.0.189"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
@@ -53,7 +54,6 @@
     "@types/pdfjs-dist": "^2.1.5",
     "@web/dev-server": "^0.1.34",
     "lit-analyzer": "^1.2.1",
-    "pdfjs-dist": "^4.0.189",
     "prettier": "^2.7.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "~4.8.2",
